# chesskell

./: .gitignore  LICENSE  Makefile  README.md  chesskell.cabal  chesskell.hs
src/: Board.hs  Common.hs  Logic.hs  Main.hs  MainWeb.hs  Minimax.hs  Move.hs  Position.hs  Scoring.hs  Tests.hs  Types.hs  Utils.hs
test/: BoardSpec.hs  LogicSpec.hs  PositionSpec.hs  TypesSpec.hs
