name:                chesskell
version:             0.1.0.0
description:         Chess in Haskell
author:              Darren Foong
maintainer:          darrenfoong@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable chesskell
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Types,
                       Board,
                       Position,
                       Move,
                       Logic
  ghc-options:         -Wall -Wincomplete-uni-patterns
  build-depends:       base >=4.12 && <4.13,
                       random
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src, test
  main-is:             Tests.hs
  other-modules:       Types,
                       Board,
                       Position,
                       Move,
                       Logic
  ghc-options:         -Wall -Wincomplete-uni-patterns
  build-depends:       base >=4.12 && <4.13,
                       random,
                       hspec >= 1.8
  default-language:    Haskell2010
