name:                chesskell
version:             0.1.0.0
description:         Chess in Haskell
author:              Darren Foong
maintainer:          darrenfoong@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable chesskell
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Types,
                       Board,
                       Position,
                       Move,
                       Logic
  ghc-options:         -Wall -Wincomplete-uni-patterns
  build-depends:       base,
                       random
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  other-modules:       Types,
                       Board,
                       Position,
                       Move,
                       Logic
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wno-missing-home-modules
  build-depends:       base,
                       random,
                       hspec,
                       hspec-discover
  default-language:    Haskell2010
