name:                chesskell
version:             0.1.0.0
description:         Chess in Haskell
author:              Darren Foong
maintainer:          darrenfoong@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable chesskell
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Types,
                       Board,
                       Position,
                       Move,
                       Logic
  ghc-options:         -Wall -Wincomplete-uni-patterns
  build-depends:       base,
                       random,
                       text
  default-language:    Haskell2010

executable chesskell-web
  hs-source-dirs:      src
  main-is:             MainWeb.hs
  other-modules:       Types,
                       Board,
                       Position,
                       Move,
                       Logic
  ghc-options:         -Wall -Wincomplete-uni-patterns
  build-depends:       base,
                       random,
                       text,
                       yesod,
                       yesod-form
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Types,
                       Board,
                       Position,
                       Move,
                       Logic
  build-depends:       base,
                       random,
                       text
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wno-missing-home-modules
  build-depends:       base,
                       text,
                       chesskell,
                       hspec,
                       hspec-discover
  default-language:    Haskell2010
